# prs-troughput

./: .gitignore  BRIDGE_NOTES.md  CHANGELOG_LATEST.md  INSTALL.md  QUICKSTART.md  README.md  data_manager.py  pr_metrics.py  pyproject.toml
docs/: CONTRIBUTOR_METRICS.md  DATA_AVAILABILITY.md
src/pr_metrics/: __init__.py  __main__.py  cli.py  github.py  processor.py  queries.py  reports.py  storage.py  utils.py
