[project]
name = "pr-metrics"
version = "0.1.0"
description = "GitHub PR metrics collector and analyzer"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "duckdb>=0.9.0",
    "tabulate>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
pr-metrics = "pr_metrics.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pr_metrics"]
